[package]
name = "appframe"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
with_ferrite = ["ferrite"]

[dependencies]
bitflags = "1.0"
libc = "0.2"
ferrite = { git = "https://github.com/Pctg-x8/ferrite", optional = true, features = ["FeImplements", "FePresentation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "rpc", "rpcdce", "libloaderapi"] }
