[package]
name = "appframe"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
build = "build.rs"

[features]
with_bedrock = ["bedrock"]
with_xcb = ["xcb"]
# マニュアルレンダリングモード: 任意のタイミングで描画を発行できるのでCPUを節約できる
manual_rendering = []

[dependencies]
univstring = "0.2"
bitflags = "1.0"
libc = "0.2"
bedrock = { git = "https://github.com/Pctg-x8/bedrock", optional = true, features = ["Implements", "Presentation"] }
xcb = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
appkit = { git = "https://github.com/Pctg-x8/appkit-rs" }
appkit-derive = { git = "https://github.com/Pctg-x8/appkit-rs" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "rpc", "rpcdce", "libloaderapi"] }
comdrive = { git = "https://github.com/Pctg-x8/comdrive" }
